[gd_scene load_steps=8 format=3 uid="uid://djgw22u5p3uyl"]

[ext_resource type="Script" path="res://levels/level_results.gd" id="1_88db1"]
[ext_resource type="PackedScene" path="res://levels/example/geometry/geometry_example_2.tscn" id="1_jqjle"]
[ext_resource type="Resource" uid="uid://d303ywfmqtibl" path="res://cards/fireball_card.tres" id="3_le2sl"]
[ext_resource type="PackedScene" uid="uid://cchk5cc6gsdpr" path="res://management/camera_manager.tscn" id="3_wnyqk"]
[ext_resource type="Resource" uid="uid://cccm561dirqa4" path="res://cards/icy_shoes.tres" id="4_g1jup"]
[ext_resource type="PackedScene" uid="uid://c3vabx08gdd7r" path="res://cards/card.tscn" id="4_i72w6"]
[ext_resource type="Resource" uid="uid://dmbefiiqth22a" path="res://cards/impact_coils.tres" id="5_nxjw2"]

[node name="LevelResults" type="Node3D"]
script = ExtResource("1_88db1")

[node name="Results" type="Control" parent="."]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="Results"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Results/CenterContainer"]
layout_mode = 2

[node name="ResultsLabel" type="Label" parent="Results/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "YOU WON!"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Results/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Press Space/A to try again.
Press Esc/B to exit."
horizontal_alignment = 1

[node name="Rewards" type="Node2D" parent="Results"]
texture_filter = 1

[node name="Reward" type="Node2D" parent="Results/Rewards"]
position = Vector2(55, 70)

[node name="Card" parent="Results/Rewards/Reward" instance=ExtResource("4_i72w6")]
card_data = ExtResource("3_le2sl")

[node name="Reward2" type="Node2D" parent="Results/Rewards"]
position = Vector2(162, 70)

[node name="Card" parent="Results/Rewards/Reward2" instance=ExtResource("4_i72w6")]
card_data = ExtResource("4_g1jup")

[node name="Reward3" type="Node2D" parent="Results/Rewards"]
position = Vector2(269, 70)

[node name="Card" parent="Results/Rewards/Reward3" instance=ExtResource("4_i72w6")]
card_data = ExtResource("5_nxjw2")

[node name="GeometryExample2" parent="." instance=ExtResource("1_jqjle")]

[node name="Camera3D" type="Camera3D" parent="GeometryExample2"]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 5.55986, 6, 8)

[node name="Camera3D2" type="Camera3D" parent="GeometryExample2"]
transform = Transform3D(-4.37114e-08, 0.707107, -0.707107, 0, 0.707107, 0.707107, 1, 3.09086e-08, -3.09086e-08, -39.4401, 6, 6)

[node name="CameraManager" parent="." instance=ExtResource("3_wnyqk")]
